--- a/docs/src/getting-started/updating-linuxcnc.adoc
+++ b/docs/src/getting-started/updating-linuxcnc.adoc
@@ -102,6 +102,7 @@ are available for Bookworm and Buster but not currently for Bullseye.
 
 [options="header"]
 |===
+| OS / Realtime Version     | Repository
 | Debian Buster - preempt   | `deb https://linuxcnc.org buster base 2.9-rtpreempt`
 | Debian Buster - RTAI      | `deb https://linuxcnc.org buster base 2.9-rt`
 | Debian Bullseye - preempt | `deb https://linuxcnc.org bullseye base 2.9-uspace`
