--- a/docs/src/drivers/hal_gpio.adoc
+++ b/docs/src/drivers/hal_gpio.adoc
@@ -52,7 +52,7 @@ gpiochip0 - 54 lines:
 ...
 ----
 
-A list of input and/or output pins should be specified as shown in the sample above. (the \ character is used for line continuation in HAL, and is used to improve readability. The pin names are case-sensitive and there must be no spaces in the strings, either beteen the comma-separated pins lists of the "=" signs.
+A list of input and/or output pins should be specified as shown in the sample above. (The \ character is used for line continuation in HAL, and is used to improve readability. The pin names are case-sensitive and there must be no spaces in the strings, either beteen the comma-separated pins lists of the "=" signs.)
 
 Additional modifiers are:
 *invert* (valid for outputs only). Inverts the sense of the physical pin relative to the value in HAL.
@@ -60,7 +60,7 @@ Additional modifiers are:
 *reset* (valid for outputs only). If any pins are allocated to the "reset" list than a HAL parameter *hal_gpio.reset_ns* will be created. This will have no effect unless the *hal_gpio.reset* function is added to a realtime thread. This should be placed after the *hal_gpio.write* function and must be in the same thread. The behaviour of this function is equivalent to the same function in the *hal_parport* driver, and it allows a step pulse every thread cycle. If the *hal_gpio.reset_ns* time is set longer than 1/4 of the period of the thread that it is added to, then the value will be reduced to 1/4 the thread period. There is a lower limit to how long the pulse can be. With 8 pins in the output list the pulse width can not reduce lower than 5000ns on a Pi4, for example.
 
 The following functions are accepted in all versions, but are only effective if a version of libgpiod_dev >= 1.6 is installed.
-They should be used in the same way as the parameters described above, and will alter the electrical paramters of the GPIO pins *if* this is supported by the hardware.
+They should be used in the same way as the parameters described above, and will alter the electrical parameters of the GPIO pins *if* this is supported by the hardware.
 
 *opendrain*
 
