--- a/docs/man/man9/motion.9
+++ b/docs/man/man9/motion.9
@@ -1,10 +1,10 @@
-.TH MOTION "9" "" "LinuxCNC Documentation" "HAL Component"
+.TH MOTION "9" "2023-12-22" "LinuxCNC Documentation" "HAL Component"
 
 .SH NAME
 motion \- accepts NML motion commands, interacts with HAL in realtime
 
 .SH SYNOPSIS
-\fBloadrt motmod [base_period_nsec=\fIperiod\fB] [base_thread_fp=\fI0 or 1\fB] [servo_period_nsec=\fIperiod\fB] [traj_period_nsec=\fIperiod\fB] [num_joints=\fI[1-16]\fB] [num_dio=\fI[1-64]\fB] [num_aio=\fI[1-64]\fB] [num_misc_error=\fI[0-64]\fB] [num_spindles=\fI[1-8]\fB]\fR  \fB[unlock_joints_mask=\fR\fIjointmask\fR\fB]\fR \fB[num_extrajoints=\fI[0-16]\fB]\fR
+\fBloadrt motmod [base_period_nsec=\fIperiod\fB] [base_thread_fp=\fI0 or 1\fB] [servo_period_nsec=\fIperiod\fB] [traj_period_nsec=\fIperiod\fB] [num_joints=\fI[1-16]\fB] [num_dio=\fI[1-64]\fB | names_dout=\fIname[,...]\fB names_din=\fIname[,...]\fB] [num_aio=\fI[1-64]\fB | names_aout=\fIname[,...]\fB names_ain=\fIname[,...]\fB] [num_misc_error=\fI[0-64]\fB] [num_spindles=\fI[1-8]\fB]\fR  \fB[unlock_joints_mask=\fR\fIjointmask\fR\fB]\fR \fB[num_extrajoints=\fI[0-16]\fB]\fR
 
 The limits for the following items are compile-time settings:
 .br
@@ -14,11 +14,45 @@ The limits for the following items are compile-time settings:
 .br
 .ns
 .TP
-\fBnum_dio\fR: Maximum number of digital inputs is set by EMCMOT_MAX_DIO.
+\fBnum_dio\fR: Maximum number of digital IO pins is set by \fBEMCMOT_MAX_DIO\fR.
+Minimum is 1, if \fBnum_dio\fR is not specified, it defaults to \fBDEFAULT_DIO\fR.
 .br
 .ns
 .TP
-\fBnum_aio\fR: Maximum number of analog inputs is set by EMCMOT_MAX_AIO.
+\fBnames_dout\fR: A comma-separated list of names for digital output pins.
+This parameter is mutually exclusive with \fBnum_dio\fR, but can be combined with \fBnames_din\fR. A
+maximum of \fBEMCMOT_MAX_DIO\fR names can be specified. The default digital output pin has names
+like \fBmotion.digital-out-00\fR whereas \fBnames_dout=\fIis-homing-x,is-homing-y\fR will create the
+HAL pins \fBmotion.dout-is-homing-x\fR and \fBmotion.dout-is-homing-y\fR.
+.br
+.ns
+.TP
+\fBnames_din\fR: A comma-separated list of names for digital input pins.
+This parameter is mutually exclusive with \fBnum_dio\fR, but can be combined with \fBnames_dout\fR.
+A maximum of \fBEMCMOT_MAX_DIO\fR names can be specified. The default digital input pin has names
+like \fBmotion.digital-in-00\fR whereas \fBnames_din=\fIhomed-x,homed-y\fR will create the HAL pins
+\fBmotion.din-homed-x\fR and \fBmotion.din-homed-y\fR.
+.br
+.ns
+.TP
+\fBnum_aio\fR: Maximum number of analog IO pins is set by \fBEMCMOT_MAX_AIO\fR.
+Minimum is 1, if \fBnum_aio\fR is not specified, it defaults to \fBDEFAULT_AIO\fR.
+.br
+.ns
+.TP
+\fBnames_aout\fR: A comma-separated list of names for analog output pins.
+This parameter is mutually exclusive with \fBnum_aio\fR, but can be combined with \fBnames_ain\fR. A
+maximum of \fBEMCMOT_MAX_AIO\fR names can be specified. The default analog output pin has names like
+\fBmotion.analog-out-00\fR whereas \fBnames_aout=\fIfeedrate1,feedrate2\fR will create the HAL pins
+\fBmotion.aout-feedrate1\fR and \fBmotion.aout-feedrate2\fR.
+.br
+.ns
+.TP
+\fBnames_ain\fR: A comma-separated list of names for analog input pins.
+This parameter is mutually exclusive with \fBnum_aio\fR, but can be combined with \fBnames_aout\fR.
+A maximum of \fBEMCMOT_MAX_AIO\fR names can be specified. The default analog input pin has names
+like \fBmotion.analog-in-00\fR whereas \fBnames_ain=\fIproxy1,proxy2\fR will create the HAL pins
+\fBmotion.ain-proxy1\fR and \fBmotion.ain-proxy2\fR.
 .br
 .ns
 .TP
@@ -27,9 +61,6 @@ The limits for the following items are compile-time settings:
 .ns
 .TP
 \fBnum_spindles\fR: Maximum number of spindles is set by EMCMOT_MAX_SPINDLES
-
-.P
-Optionally the number of Digital I/O is set with num_dio. The number of Analog I/O is set with num_aio. The default is 4 each.
 
 .P
 Pin names starting with "\fBjoint\fR"  or "\fBaxis\fR" are are read and updated by the motion-controller function.
@@ -64,6 +95,14 @@ in the numbering sequence.  For example, specifying [KINS]JOINTS=5 and
 [EMCMOT]motmod num_extrajoints=2 for a 3 joint trivkins configuration
 \fB[KINS] KINEMATICS=trivkins coordinates=xyz\fR uses joints 0,1,2 for
 the kinematic joints and joints 3,4 for the 'extra' joints.
+
+An equal number of digital or analog IO pins will always be created. For
+example, if \fBnames_din\fR is specified with two pins, two named input and two
+default named output pins will be created. In cases where \fBnames_dout\fR is
+specified with two pins and \fBnames_din\fR with three pins, two named output
+and one default named output pin will be created, along with three named input
+pins. This principle applies independently to digital and analog IO pins,
+allowing for scenarios such as having three digital pins and two analog pins.
 
 .SH  MOTION PINS
 
