--- a/docs/src/code/building-linuxcnc.adoc
+++ b/docs/src/code/building-linuxcnc.adoc
@@ -186,14 +186,19 @@ $ make ../bin/froboz
 
 === Building Debian Packages
 
-When building Debian packages, the LinuxCNC programs are compiled from
-source and then stored in a Debian package, complete with dependency
-information.  This takes more time, and the programs can't be used until
-the Debian package is installed on a target machine.
+When building Debian packages, the LinuxCNC programs are compiled from source
+and then stored in a Debian package, complete with dependency information.
+This process by default also includes the building of the documentation,
+which takes its time because of all the I/O for many languages, but that
+can be skipped. LinuxCNC is then installed as part of those packages on the
+same machines or on whatever machine of the same architecture that  the .deb
+files are copied to. LinuxCNC cannot be run until the Debian packages
+are installed on a target machine and then the executables are available
+in /usr/bin and /usr/lib just like other regular software of the sytem.
 
 This build mode is primarily useful when packaging the software for
 delivery to end users, and when building the software for a machine
-that doesn't have the build environment installed, or that doesn't have
+that does not have the build environment installed, or that does not have
 internet access.
 
 Building Debian packages requires the `dpkg-buildpackage` tool, from the
@@ -289,11 +294,38 @@ If you want just the traditional RTAI "kernel module" realtime, use
 == Satisfying Build Dependencies
 
 On Debian-based platforms we provide packaging meta-data that knows
-what external software packages need to be installed in order to build
-LinuxCNC.  This is called the Build Dependencies of LinuxCNC.  You can
-use this meta-data to easily list the required packages missing from
-your build system.
+what external software packages need to be installed in order to build LinuxCNC.
+These are referred to as the _build dependencies_ of LinuxCNC, i.e. those
+packages that need to be available such that
+* the build succeeds and
+* the build can be built reproducibly.
 
+You can use this meta-data to easily list the required packages missing from your build system.
+First, go to the source tree of LinuxCNC and initiate its default self-configuration,
+if not already performed:
+
+-----
+$ cd linuxcnc-dev
+$ ./debian/configure
+-----
+
+This will prepare the file debian/control that contains lists of Debian packages
+to create with the runtime dependencies for those packages and for our cause also
+the build-dependencies for those to-be-created packages.
+
+The most straightforward way to get all build-dependencies installed is to just
+execute (from the same directory):
+
+----
+sudo apt-get build-dep .
+----
+
+which will install all the dependencies required but available.
+This completes the installation of build-dependencies.
+
+The remainder of this section describes a semi-manual approach.
+The list of dependencies in debian/control is long and it is tedious
+to compare the current state of packages already installed with it.
 Debian systems provide a program called `dpkg-checkbuilddeps` that
 parses the package meta-data and compares the packages listed as build
 dependencies against the list of installed packages, and tells you
@@ -305,14 +337,6 @@ First, install the `dpkg-checkbuilddeps` program by running:
 $ sudo apt-get install dpkg-dev
 -----
 
-Then ask your LinuxCNC git checkout to generate its Debian package
-meta-data:
-
------
-$ cd linuxcnc-dev/debian
-$ ./configure uspace
-$ cd ..
------
 
 Finally ask `dpkg-checkbuilddeps` to do its job (note that it needs to
 run from the `linuxcnc-dev` directory, *not* from `linuxcnc-dev/debian`):
