Fix typos in docs subdirectory
Found via `codespell -q 3 -S *.po,*.pot,*.svg,*.ts,./.git/logs,./share,./docs/man/es,./configs/attic,*_fr.*,*_es.*,README_es,./src/hal/classicladder -L ans,ba,breal,bu,bulle,busses,childs,componentes,currenty,doubleclick,dout,dum,etxt,extint,faktor,fo,fpr,halp,ihs,inout,inport,mot,parm,parms,propertys,ro,seh,ser,smoe,te,tey,trough,ue,ure,wille,wont,wonte`

--- a/docs/README.adoc
+++ b/docs/README.adoc
@@ -187,7 +187,7 @@ At the moment, build rules are created for languages with more than 2
 percent translated
 link:https://hosted.weblate.org/projects/linuxcnc/linuxcnc-docs/[according
 to Weblate] or which have been updated the last 12 months according to
-the PO-Revision-Date field in docs/po/*.po.  Documentaion packages for
+the PO-Revision-Date field in docs/po/*.po.  Documentation packages for
 Debian are build for languages with more than 50 percent translation.
 This ensure translators and proof readers can see the result of their
 effort on https://linuxcnc.org/docs/devel/html/, while we limit the
