--- a/src/emc/usr_intf/gmoccapy/release_notes.txt
+++ b/src/emc/usr_intf/gmoccapy/release_notes.txt
@@ -1,3 +1,7 @@
+ver 3.4.7.1
+ - Remember window size and position when switching back from fullscreen/maximized
+ - Fix "window does not fit 1024x768 in fullscreen"
+
 ver 3.4.7
  - Added setting to allow smaller width of virtual keyboard (for widescreens)
  - Fixed box_dro_side is displayed in the G-code editor (#2627)
