--- a/docs/src/getting-started/system-requirements.adoc
+++ b/docs/src/getting-started/system-requirements.adoc
@@ -8,7 +8,7 @@
 
 The minimum system to run LinuxCNC and Debian / Ubuntu may vary depending
 on the exact usage. Stepper systems in general require faster threads to
-generate step pulses than servo systems. You can use the Live-CD to test
+generate step pulses than servo systems. You can use the Live CD to test
 the software before committing to a permanent installation on a computer.
 Keep in mind that the Latency Test numbers are more important than the
 processor speed for software step generation. More information on the
@@ -25,22 +25,19 @@ the following minimum hardware specification. These numbers are not the
 absolute minimum but will give reasonable performance for most stepper
 systems.
 
-* 700 MHz x86 processor (1.2 GHz x86 processor recommended) or Raspberry
-  Pi 4 or better.
-* To run LinuxCNC 2.8 and Debian Buster from the LiveCD the system should
-  be 64-bit capable.
+* 700 MHz x86 processor (1.2 GHz x86 processor recommended) or Raspberry Pi 4 or better.
+* LinuxCNC 2.8 or later from the Live CD expects a 64-bit capable system.
 * 512 MB or more of RAM
 * 8 GB hard disk
-* Graphics card capable of at least 1024x768 resolution, which is not
-  using the NVidia or ATI fglrx proprietary drivers. Modern onboard
-  graphic chipsets seem to generally be OK.
+* Graphics card capable of at least 1024x768 resolution, which is not using the NVidia or ATI fglrx proprietary drivers.
+  Modern onboard graphic chipsets seem to generally be OK.
 * A network or Internet connection (not strictly needed, but very useful
   for updates and for communicating with the LinuxCNC community)
 
 Minimum hardware requirements change as Linux distributions evolve so
 check the https://www.debian.org/releases/stable/amd64/ch02.en.html[Debian]
-web site for details on the LiveCD you're using. Older hardware may
-benefit from selecting an older version of the LiveCD when available.
+web site for details on the Live CD you're using. Older hardware may
+benefit from selecting an older version of the Live CD when available.
 
 [[sec:kernel_and_version_requirements]]
 == Kernel and Version requirements
