--- a/docs/src/getting-started/system-requirements.adoc
+++ b/docs/src/getting-started/system-requirements.adoc
@@ -27,12 +27,11 @@ systems.
 
 * 700 MHz x86 processor (1.2 GHz x86 processor recommended) or Raspberry Pi 4 or better.
 * LinuxCNC 2.8 or later from the Live CD expects a 64-bit capable system.
-* 512 MB or more of RAM
-* 8 GB hard disk
+* 512 MB of RAM, 4 GB with GUI to avoid surprises
+* No hard disk for Live CD, 8 GB or more for permanent installation
 * Graphics card capable of at least 1024x768 resolution, which is not using the NVidia or ATI fglrx proprietary drivers.
   Modern onboard graphic chipsets seem to generally be OK.
-* A network or Internet connection (not strictly needed, but very useful
-  for updates and for communicating with the LinuxCNC community)
+* Internet connection (not strictly needed, but very useful for updates and for communicating with the LinuxCNC community)
 
 Minimum hardware requirements change as Linux distributions evolve so
 check the https://www.debian.org/releases/stable/amd64/ch02.en.html[Debian]
@@ -42,12 +41,11 @@ benefit from selecting an older version of the Live CD when available.
 [[sec:kernel_and_version_requirements]]
 == Kernel and Version requirements
 
-LinuxCNC requires a kernel modified for realtime use to control real
-machine hardware. It can, however run on a standard kernel in simulation
-mode for purposes such as checking G-code, testing config files and
-learning the system.
-To work with these kernel versions there are two versions of LinuxCNC
-distributed. The package names are "linuxcnc" and "linuxcnc-uspace".
+LinuxCNC requires a kernel modified for realtime use to control real machine hardware.
+It can, however run on a standard kernel in simulation mode for purposes
+such as checking G-code, testing config files and learning the system.
+To work with these kernel versions there are two versions of LinuxCNC distributed.
+The package names are "linuxcnc" and "linuxcnc-uspace".
 
 The realtime kernel options are preempt-rt, RTAI and Xenomai.
 
