--- a/docs/src/drivers/hal_gpio.adoc
+++ b/docs/src/drivers/hal_gpio.adoc
@@ -5,11 +5,11 @@
 
 = Generic driver for any GPIO supported by gpiod.
 
-This driver has been tested on the Raspberry Pi, and should also work on Bananapi, Beaglebone, Pine64 (et al) and other single board computers, and potentially on other platforms.
+This driver has been tested on the Raspberry Pi, and should also work on Banana Pi, BeagleBone, Pine64 (et al.) and other single board computers, and potentially on other platforms.
 
 == Purpose
 
-This driver allows the use of GPIO pins in a way analagous to the parallel port driver on x86 PCs. It can use the same step generators, encoder counters and similar components.
+This driver allows the use of GPIO pins in a way analogous to the parallel port driver on x86 PCs. It can use the same step generators, encoder counters and similar components.
 
 == Usage
 
@@ -54,7 +54,7 @@ gpiochip0 - 54 lines:
 
 A list of input and/or output pins should be specified as shown in the sample above.
 The \ character is used for line continuation in HAL, and is used to improve readability.
-The pin names are case-sensitive and there must be no spaces in the strings, neither between the comma-separated pins lists of the "=" signs.
+The pin names are case-sensitive and there must be no spaces in the strings, neither between the comma-separated pins lists nor the "=" signs.
 
 Additional modifiers are:
 *invert* (valid for outputs only). Inverts the sense of the physical pin relative to the value in HAL.
@@ -96,7 +96,7 @@ The version of libgpiod-dev installed can be determined by the command "gpioinfo
 
 * 'hal_gpio.reset' - Only exported if there are pins defined in the reset list. This should be placed after the "write" function, and should be in the same thread.
 
-Typically the 'read' function will be early in the call list, before any encoder counters and the 'write' function will be later in the call list, after `stepgen.make-pulses`.
+Typically, the 'read' function will be early in the call list, before any encoder counters and the 'write' function will be later in the call list, after `stepgen.make-pulses`.
 
 
 == Pin Identification
@@ -108,7 +108,7 @@ A further update to this driver might allow access by index number, but this is 
 == Troubleshooting permissions problems.
 
 If "access denied" messages are returned on loading the driver, try the following recipe:
-(Should not be needed for Raspian, and will need to be modified to match the actual GPIO chip name on non-Pi platforms)
+(Should not be needed for Raspbian, and will need to be modified to match the actual GPIO chip name on non-Pi platforms)
 
 1) Create a new group "gpio" with the command
 
